Gradle Fix to go back to 100% Classpath only...
Signed-off-by: Jamz <Jamz@Nerps.net>